# ros2_trash_detect

./: Detector.ipynb  LICENSE  README.md  check.py  clean_dataset_image.sh  count_file.py  dd.py  json_to _txt.py  new_check.py  nogada.py  resize.py  split.py  split_10.py  test_mps.py
src/yolo_trash_classification/: package.xml  setup.cfg  setup.py
src/yolo_trash_classification/yolo_trash_classification/: yolo_subscriber.py
